[metadata]
name = QligFEP
author = Willem Jespers
author_email = w.jespers@lacdr.leidenuniv.nl
version = attr: src.VERSION
description =
    Python command line functions designed to facilitate a robust and fast
    setup of free energy perturbation (FEP)
long_description = file: README.md
license = GPL2
license_file = LICENSE
url = https://github.com/qusers/qligfep
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    numpy
